DBManager정의 오류 수정 20250129 22:05

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,17 @@
             android:name=".Register"
             android:exported="false" />
         <activity
-            android:name="com.example.matchingapp.MainActivity"
+            android:name="com.example.matchingapp.FirstPageToLoginAndRegister"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.matchingapp.MainActivity"
+            android:exported="true" />
 
     </application>
 
