--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:exported="true" />
 
         <activity
-            android:name="com.example.matchingapp.MainActivity"
+            android:name=".MainActivity"
             android:exported="true" />
 
     </application>
