회원가입 마이페이지 연동 20250130 23:14

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,28 +14,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MatchingApp"
         tools:targetApi="31">
-
         <activity
-            android:name="com.example.matchingapp.FirstPageToLoginAndRegister"
+            android:name=".ProfileEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FirstPageToLoginAndRegister"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Login"
             android:exported="true" />
-
         <activity
             android:name=".Register"
             android:exported="true" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
