네이버지도api key 등록 및 마이페이지에 위치설정버튼과 위치표시용 텍스트뷰 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+
+        <!--네이버지도 API-->
+        <meta-data
+            android:name="com.naver.maps.clientId"
+            android:value="qv2tml0f23"/>
+
     </application>
 
 </manifest>
